--- a/style.css
+++ b/style.css
@@ -2,4 +2,17 @@
     border: 2px solid blue ;
     border-radius: 5px;
   }
-  
+h1 {
+  size: 56;
+  text-align: left;
+  font-family: 'Times New Roman', serif;
+}
+#dataInputForm {
+  background-color: white ;
+  margin-left: 10%;
+  margin-right: 10%;
+  border: 2px solid white ;
+  border-radius: 20px;
+  padding-block: 10px;
+  padding-inline: 10px;
+}
