--- a/style.css
+++ b/style.css
@@ -20,10 +20,22 @@ h1 {
   text-align: center;
   font-size: 30px;
 }
+#inputBoxes {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+#sensorInput{
+  padding-inline: 10px;
+}
 hr {
   margin-left: 10%;
   margin-right: 10%;
 }
 div {
   text-align: center;
+}
+#errorMessage {
+  color: red;
+  font-size: small;
 }
