--- a/style.css
+++ b/style.css
@@ -20,13 +20,17 @@ h1 {
   text-align: center;
   font-size: 30px;
 }
-#inputBoxes {
+#CO2Input {
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
 #sensorInput{
-  padding-inline: 10px;
+  padding-inline: 20px;
+  border-right: 2px solid black;
+}
+#lastSensorInput {
+  padding-inline: 20px;
 }
 hr {
   margin-left: 10%;
@@ -47,4 +51,15 @@ div {
 }
 #logo {
   padding-inline: 20px;
+}
+#graphScreen{
+  background: white;
+  margin-left: 10%;
+  margin-right: 10%;
+  border: 2px solid white ;
+  border-radius: 20px;
+  padding-block: 10px;
+  padding-inline: 10px;
+  text-align: center;
+  font-size: 30px;
 }
